Remove redundant TypeConstant casts and chain register/resolve calls
Now that ConstantPool.register() is properly generic (<T extends Constant> T),
casts on its return value are unnecessary when the argument is already typed.
Also chains register().resolveGenerics() in xConst to eliminate reassignment.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>